<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">regdemo</string>
    <string name="action_settings">Settings</string>
    <string name="title">Member Registration Demo</string>
     <string name="jina">Jina</string>
     <string name="mkoa">Mkoa</string>
     <string name="wilaya">Wilaya</string>
     <string name="kata">Kata</string>
     <string name="simu">Simu</string>
     <string name="kikundi">Kikundi</string>
     <string name="biashara">Biashara</string>
     <string name="mkopokiasi">Kiasi Cha Mkopo</string>
     <string name="tarehemkopo">Tarehe Mkopo</string>
     <string name="picha">Picha</string>
     <string name="bonyeza">Piga Picha</string>
      <string name="inayofuata">Inayofuata</string>
     <string name="nenosiri">Neno La Siri</string>
     <string name="tumataarifa">Tuma Taarifa</string>
      <string name="apiURL">http://lab.comasi.com/regdemo/api/index.php</string>
    <string name="songURL">http://192.168.43.31/songs/</string>
   <string name="pictureURL">http://192.168.43.31/picture/</string>
</resources>
