<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
  

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/jina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:ems="10"
        android:hint="@string/jina" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mkoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jina"
        android:ems="10"
        android:hint="@string/mkoa" />

    <EditText
        android:id="@+id/wilaya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mkoa"
        android:ems="10"
        android:hint="@string/wilaya" />

    <EditText
        android:id="@+id/kata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wilaya"
        android:ems="10"
        android:hint="@string/kata" />

    <EditText
        android:id="@+id/simu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kata"
        android:ems="10"
        android:hint="@string/simu"
        android:inputType="phone" />

    <EditText
        android:id="@+id/kikundi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/simu"
        android:ems="10"
        android:hint="@string/kikundi" />

    <Button
        android:id="@+id/inayofuata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kikundi"
        android:text="@string/inayofuata" />

</RelativeLayout>

