<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    
  

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/biashara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:ems="10"
        android:hint="@string/biashara" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mkopokiasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/biashara"
        android:ems="10"
        android:hint="@string/mkopokiasi"
        android:inputType="numberDecimal" />

   <TextView
        android:id="@+id/taremkopo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mkopokiasi"
        android:text="@string/tarehemkopo" 
        android:ems="10" />
    <DatePicker
        android:id="@+id/tarehemkopo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taremkopo" />

    <Button
        android:id="@+id/pigapicha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tarehemkopo"
        android:text="@string/bonyeza" />

    <EditText
        android:id="@+id/nenosiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pigapicha"
        android:ems="10"
        android:hint="@string/nenosiri"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/tumadata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nenosiri"
        android:text="@string/tumataarifa" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/tarehemkopo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>

